RESOLVED FIXED 189142
Properties that take <position> should not accept 3 values
https://bugs.webkit.org/show_bug.cgi?id=189142
Summary Properties that take <position> should not accept 3 values
Eric Willigers
Reported 2018-08-29 20:14:52 PDT
https://drafts.csswg.org/css-images-3/#the-object-position The relevant syntax is <position> = [ [ left | center | right ] || [ top | center | bottom ] | [ left | center | right | <length-percentage> ] [ top | center | bottom | <length-percentage> ]? | [ [ left | right ] <length-percentage> ] && [ [ top | bottom ] <length-percentage> ] ] A number of test cases currently fail: https://wpt.fyi/results/css/css-images/parsing/object-position-invalid.html e.g. "center left 1px" should not be accepted. This also applies to <position> in gradients
Attachments
Patch (324.49 KB, patch)
2019-10-25 18:30 PDT, Simon Fraser (smfr)
no flags
Patch (328.64 KB, patch)
2019-10-25 19:47 PDT, Simon Fraser (smfr)
koivisto: review+
Radar WebKit Bug Importer
Comment 1 2018-09-04 13:49:19 PDT
Simon Fraser (smfr)
Comment 2 2019-10-25 18:26:32 PDT
Seems like some css/css-shapes tests are still expecting the 3-value syntax.
Simon Fraser (smfr)
Comment 3 2019-10-25 18:30:56 PDT
Simon Fraser (smfr)
Comment 4 2019-10-25 18:37:21 PDT
*** Bug 200213 has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 5 2019-10-25 19:47:25 PDT
Antti Koivisto
Comment 6 2019-10-28 11:02:43 PDT
Comment on attachment 381988 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=381988&action=review > Source/WebCore/css/parser/CSSPropertyParserHelpers.cpp:926 > + if (values[i + 1] && !values[i + 1]->isValueID()) Relying on caller to ensure i + 1 is not out of bounds is not very nice. How about passing values as std::array or something?
Simon Fraser (smfr)
Comment 7 2019-10-28 13:32:34 PDT
Simon Fraser (smfr)
Comment 8 2019-11-22 15:00:12 PST
*** Bug 148211 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.